Fix overlap

--- a/src/pages/HomePage/AboutSection.module.scss
+++ b/src/pages/HomePage/AboutSection.module.scss
@@ -11,6 +11,6 @@
     right: 0;
     left: 0;
     transform: translateY(-2px);
-    z-index: 100;
+    z-index: 1;
   }
 }
